@@ -27,21 +27,10 @@ class RemoteGlobalCollectTest < Test::Unit::TestCase
       source: :apple_pay
     )
 
-    @google_pay = network_tokenization_credit_card(
-      '4567350000427977',
-      payment_cryptogram: 'EHuWW9PiBkWvqE5juRwDzAUFBAk=',
-      month: '01',
-      year: Time.new.year + 2,
+    @google_pay = ActiveMerchant::Billing::NetworkTokenizationCreditCard.new({
       source: :google_pay,
-      transaction_id: '123456789',
-      eci: '05'
-    )
-
-    @google_pay_pan_only = credit_card(
-      '4567350000427977',
-      month: '01',
-      year: Time.new.year + 2
-    )
+      payment_data: "{ 'version': 'EC_v1', 'data': 'QlzLxRFnNP9/GTaMhBwgmZ2ywntbr9'}"
+    })
 
     @accepted_amount = 4005
     @rejected_amount = 2997
@@ -131,29 +120,10 @@ class RemoteGlobalCollectTest < Test::Unit::TestCase
     assert_equal 'Succeeded', capture.message
   end
 
-  def test_successful_purchase_with_google_pay
+  def test_failed_purchase_with_google_pay
     options = @preprod_options.merge(requires_approval: false)
-    response = @gateway_preprod.purchase(4500, @google_pay, options)
-    assert_success response
-    assert_equal 'Succeeded', response.message
-    assert_equal 'CAPTURE_REQUESTED', response.params['payment']['status']
-  end
-
-  def test_successful_purchase_with_google_pay_pan_only
-    options = @preprod_options.merge(requires_approval: false, customer: 'GP1234ID', google_pay_pan_only: true)
-    response = @gateway_preprod.purchase(4500, @google_pay_pan_only, options)
-
-    assert_success response
-    assert_equal 'Succeeded', response.message
-    assert_equal 'CAPTURE_REQUESTED', response.params['payment']['status']
-  end
-
-  def test_unsuccessful_purchase_with_google_pay_pan_only
-    options = @preprod_options.merge(requires_approval: false, google_pay_pan_only: true, customer: '')
-    response = @gateway_preprod.purchase(4500, @google_pay_pan_only, options)
-
+    response = @gateway_direct.purchase(4500, @google_pay, options)
     assert_failure response
-    assert_equal 'order.customer.merchantCustomerId is missing for UCOF', response.message
   end
 
   def test_successful_purchase_with_fraud_fields
@@ -618,16 +588,6 @@ class RemoteGlobalCollectTest < Test::Unit::TestCase
 
     assert_scrubbed(@credit_card.number, transcript)
     assert_scrubbed(@gateway.options[:secret_api_key], transcript)
-  end
-
-  def test_scrub_google_payment
-    options = @preprod_options.merge(requires_approval: false)
-    transcript = capture_transcript(@gateway) do
-      @gateway_preprod.purchase(@amount, @google_pay, options)
-    end
-    transcript = @gateway.scrub(transcript)
-    assert_scrubbed(@google_pay.payment_cryptogram, transcript)
-    assert_scrubbed(@google_pay.number, transcript)
   end
 
   def test_scrub_apple_payment
