@@ -120,6 +120,7 @@
 * Braintree: Surface the paypal_details in response object [yunnydang] #5043
 * Worldline (formerly GlobalCollect): Update API endpoints [deemeyers] #5049
 * Quickbooks: Update scrub method [almalee24] #5049
+*  Worldline (formerly GlobalCollect):Remove decrypted payment data [almalee24] #5032
 
 == Version 1.135.0 (August 24, 2023)
 * PaymentExpress: Correct endpoints [steveh] #4827
